src/test/ui/parser/attr-bad-meta-2.stderr
error: expected a literal or ::-separated path
  --> $DIR/attr-bad-meta-2.rs:1:9
   |
LL | #[path =]
   |         ^

error: aborting due to previous error

